--- a/composeApp/src/androidMain/res/values/strings.xml
+++ b/composeApp/src/androidMain/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">Wireless Communication</string>
+            <string name="send_button">Send</string>
+
+            <!-- <string name="app_name">My Multiplatform App</string> -->
+
+            <!-- <string name="app_name">My Multiplatform App</string> -->
+
+            <!-- <string name="app_name">My Multiplatform App</string> -->
+
+            <!-- <string name="app_name">My Multiplatform App</string> -->
+
+            <!-- <string name="app_name">My Multiplatform App</string> -->
+
+            <!-- <string name="app_name">My Multiplatform App</string> -->
 </resources>
