--- a/composeApp/src/androidMain/res/values/strings.xml
+++ b/composeApp/src/androidMain/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Wireless Communication</string>
+    <string name="app_name">WCWI</string>
             <string name="send_button">Send</string>
 
             <!-- <string name="app_name">My Multiplatform App</string> -->
